switch from rxtx to jSerialComm lib